# jsts-playground

./: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Console.tsx  Editor.tsx  Settings.tsx  Toolbar.tsx
src/hooks/: useCodeExecution.ts  usePersistence.ts
src/stores/: appStore.ts
src/styles/: App.module.css  Console.module.css  Editor.module.css  Settings.module.css  Toolbar.module.css  nord.css
src/utils/: sandbox.ts  transpiler.ts  worker.ts
